--- a/docs/informarch/08_navigator/956_video_0038.md
+++ b/docs/informarch/08_navigator/956_video_0038.md
@@ -1,7 +1,9 @@
 # 22.7. Как вставить видео в игру на Навигаторе?
 <!-- [:faq_22_07] -->
 
-> Эта статья устарела. Новый плеер с поддержкой HTML - [qSpider](https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html)
+:::danger[**Эта статья устарела!**]
+Эта статья устарела. Новый плеер с поддержкой HTML - [qSpider](04_qspider_0004.md).
+:::
 
 В: Как вставить видео в игру на Навигаторе?
 
