--- a/docs/informarch/09_aeroqsp/981_aeroqsp_0024.md
+++ b/docs/informarch/09_aeroqsp/981_aeroqsp_0024.md
@@ -29,6 +29,6 @@
 Автор: `BYTE`
 30.05.2011 22:21
 
-#### Примечание Aleks Versus:
-
-> AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на [qSpider](https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120), но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.
+:::warning[**Примечание Aleks Versus:**]
+AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на [qSpider](https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120), но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.
+:::
