fix container positions, prepare to deploy

--- a/docs/news/news_20251003_594.md
+++ b/docs/news/news_20251003_594.md
@@ -1,9 +1,9 @@
 ---
-sidebar_position: 20251003
+sidebar_position: -20251003
 ---
 # Нововведения в QSP 5.9.2-5.9.4
 
-[Клуб любителей текстовых игр на QSP·3 окт в 18:12](https://m.vk.com/@qsplayer-novovvedeniya-v-qsp-592-594?context=author_page_date&ref=author_page)
+[Клуб любителей текстовых игр на QSP·3 окт 2025 в 18:12](https://m.vk.com/@qsplayer-novovvedeniya-v-qsp-592-594?context=author_page_date&ref=author_page)
 
 В QSP 5.9.2 было проведено много технических улучшений, ускорена работа отдельных операций и плеера. В QSP 5.9.3 основной упор так же делался на улучшение работы движка, а вот уже в версии плеера 5.9.4 появилось много всего нового.
 
