fix links for buildings

--- a/docs/news/news_20210601_580.md
+++ b/docs/news/news_20210601_580.md
@@ -11,7 +11,7 @@ sidebar_position: -20210601
 
 ### Изменение в работе массивов
 
-Это, пожалуй, самое основное из грядущих изменений, и о нём мы подробно писали в статье ["Массивы уже не те"](arrays_580/index.md). Здесь же изложим кратко.
+Это, пожалуй, самое основное из грядущих изменений, и о нём мы подробно писали в статье ["Массивы уже не те"](../articles/arrays_580/index.md). Здесь же изложим кратко.
 
 Теперь в массиве будет нельзя под одним индексом хранить и текстовое и числовое значение. Если вы запишете в ячейку числовое значение, а потом запишете в ту же ячейку текстовое значение, текстовое значение затрёт числовое.
 
