fix(docs): QSP.su -> QSP.org

--- a/docs/informarch/qspider/news_20201019_qspider090.md
+++ b/docs/informarch/qspider/news_20201019_qspider090.md
@@ -12,7 +12,7 @@ sidebar_position: 20201019
 
 В предыдущей версии, **0.8.1**, помимо небольшого баг-фикса и добавления горячих клавиш в плеер, появилась возможность у автора игры добавлять собственные сочетания горячих клавиш.
 
-[Архив с примером](http://qsp.su/components/com_agora/img/members/2512/demo.zip "http://qsp.su/components/com_agora/img/members/2512/demo.zip")
+[Архив с примером](https://qsp.org/components/com_agora/img/members/2512/demo.zip "https://qsp.org/components/com_agora/img/members/2512/demo.zip")
 
 Для добавления сочетания клавиш в игру необходимо прописать дополнительную секцию.
 
